complete taco.html addrecipe-links-and-images directory

--- a/recipes/tacos.html
+++ b/recipes/tacos.html
@@ -7,5 +7,38 @@
 
   <body>
     <h1>Ground Beef Tacos</h1>
+    <img src="../recipe-links-and-images/images/ground-beef-tacos.jpeg" alt="picture of delicious tacos">
+
+    <h2>Description</h2>
+    <p>A classic weeknight staple - these tacos are filling and are ready to be devoured in less than 30 minutes.</p>
+    <p>Feel free to customize however you like.</p>
+
+    <h3>Ingredients</h3>
+
+    <ul>
+      <li>1 lb ground beef 80% lean</li>
+      <li>a pinch of salt</li>
+      <li>1/2 tsp cumin</li>
+      <li>1/2 tsp garlic powder</li>
+      <li>1/4 tsp onion powder</li>
+      <li>8 flour or corn tortillas</li>
+      <li>1/2 cup vegetable or canola oil</li>
+      <li>shredded 4 cheese blend</li>
+      <li>1/4 cup of water</li>
+    </ul>
+
+    <h3>Steps</h3>
+
+    <ol>
+      <li> Brown the meat. Heat up your skillet over medium heat. Add the ground beef.</li>
+      <li> Cook the ground beef, breaking it up while it cooks until browned.</li>
+      <li> Drain excess grease from the skillet. Reduce heat to low.</li>
+      <li> Season the meat and add the water.</li>
+      <li> Allow to simmer for 5 minutes.</li>
+      <li> While meat simmers, wrap tortillas in damp paper towel and microwave for 30 seconds.</li>
+      <li> Remove tortillas from microwave and fill with seasoned meat and top with cheese.</li>
+      <li> Enjoy!</li>
+    </ol>
+
   </body>
 </html>
