added brie page

--- a/index.html
+++ b/index.html
@@ -7,7 +7,11 @@
 
   <body>
     <h1>Odin Recipes</h1>
-    <a href="recipes/tacos.html">Ground Beef Tacos</a>
+    <ul>
+        <a href="recipes/tacos.html">Ground Beef Tacos</a>
+        <a href="recipes/bakedbrie.html">Baked Brie with Pepper Jelly</a>
+    </ul>
+    
     
   </body>
 </html>
