add brie link to index.html

--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
   <body>
     <h1>Odin Recipes</h1>
     <ul>
-        <a href="recipes/tacos.html">Ground Beef Tacos</a>
-        <a href="recipes/bakedbrie.html">Baked Brie with Pepper Jelly</a>
+        <li><a href="recipes/tacos.html">Ground Beef Tacos</a></li>
+        <li><a href="recipes/bakedbrie.html">Baked Brie with Pepper Jelly</a></li>
     </ul>
     
     
