--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <ul>
         <li><a href="recipes/tacos.html">Ground Beef Tacos</a></li>
         <li><a href="recipes/bakedbrie.html">Baked Brie with Pepper Jelly</a></li>
+        <li><a href="recipes/cheeseburger.html">The Best Cheeseburger</a></li>
     </ul>
     
     
