fix file location for GitHub Pages hosting

--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
   <body>
     <h1>Odin Recipes</h1>
     <ul>
-      <li><a href="tacos.html">Ground Beef Tacos</a></li>
-      <li><a href="bakedbrie.html">Baked Brie with Pepper Jelly</a></li>
-      <li><a href="cheeseburger.html">The Best Cheeseburger</a></li>
+      <li><a href="recipes/tacos.html">Ground Beef Tacos</a></li>
+      <li><a href="recipes/bakedbrie.html">Baked Brie with Pepper Jelly</a></li>
+      <li><a href="recipes/cheeseburger.html">The Best Cheeseburger</a></li>
     </ul>
     
     
