change cheeseburger text and styles

--- a/recipes/cheeseburger.html
+++ b/recipes/cheeseburger.html
@@ -7,7 +7,7 @@
   </head>
 
   <body>
-    <h1>The Best Cheeseburger Ever</h1>
+    <h1>The Cheeseburger -  An American Classic</h1>
     <img src="../recipe-links-and-images/images/cheeseburger.jpeg" alt="picture of delicious cheeseburger">
 
     <h2>Description</h2>
